--- a/app/package.json
+++ b/app/package.json
@@ -4,18 +4,23 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "parcel src/index.html --no-cache",
-    "prod": "parcel build src/index.html --no-cache --no-source-maps"
+    "clean-dist": "del-cli --force ./dist",
+    "build": "parcel build src/index.html --no-cache --no-source-maps",
+    "deploy": "firebase deploy",
+    "prod": "npm run clean-dist && npm run build && npm run deploy"
   },
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-image": "^2.0.0-rc.0",
     "@parcel/transformer-sass": "^2.0.0-rc.0",
+    "del-cli": "^4.0.1",
     "parcel": "^2.0.0-rc.0",
     "sass": "^1.39.0",
     "typescript": "^4.4.2"
   },
   "dependencies": {
     "client-zip": "^2.0.0",
+    "dayjs": "^1.10.7",
     "html2canvas": "^1.3.2"
   }
 }
