--- a/app/.gitignore
+++ b/app/.gitignore
@@ -31,6 +31,7 @@ chrome-profiler-events*.json
 .history/*
 
 # misc
+/.angular
 /.angular/cache
 /.sass-cache
 /connect.lock
@@ -40,6 +41,7 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+/.firebase
 
 # System Files
 .DS_Store
